adding post prueba

--- a/_posts/2022-12-30-prueba.md
+++ b/_posts/2022-12-30-prueba.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "prueba"
 summary: "post de prueba"
-author: Jjesan_vr
+author: jesan_vr
 date: '2022-12-30 12:44:30 +0530'
 category: jekyll
 thumbnail: /assets/img/posts/code.jpg
